--- a/Catalogo_da_Biblioteca.ipynb
+++ b/Catalogo_da_Biblioteca.ipynb
@@ -1,1 +1,180 @@
-{"cells":[{"cell_type":"code","source":["# ==============================\n","# 🔧 Instalação de pacotes\n","# ==============================\n","!apt update -y\n","!apt install -y tesseract-ocr poppler-utils\n","!pip install --upgrade pytesseract Pillow pdf2image PyMuPDF easyocr gspread oauth2client \\\n","    google-api-python-client google-auth google-auth-oauthlib google-auth-httplib2 \\\n","    gspread-formatting opencv-python-headless numpy\n","\n","# ==============================\n","# 📂 Montar Google Drive\n","# ==============================\n","from google.colab import drive\n","drive.mount('/content/drive', force_remount=True)\n","\n","# ==============================\n","# 📦 Importações\n","# ==============================\n","import os\n","import re\n","import fitz  # PyMuPDF\n","from PIL import Image\n","import pytesseract\n","import easyocr\n","import gspread\n","from oauth2client.service_account import ServiceAccountCredentials\n","from pdf2image import convert_from_path\n","from gspread_formatting import set_row_height, set_column_width, format_cell_range, CellFormat, TextFormat, set_frozen\n","\n","# ==============================\n","# 🔐 Autenticação Google\n","# ==============================\n","scope = [\n","    \"https://www.googleapis.com/auth/spreadsheets\",\n","    \"https://www.googleapis.com/auth/drive\"\n","]\n","\n","json_path = '/content/drive/MyDrive/Colab Notebooks/caetanodecampos-a97889ef1071.json'\n","if not os.path.exists(json_path):\n","    raise FileNotFoundError(f\"Arquivo JSON não encontrado: {json_path}\")\n","\n","creds = ServiceAccountCredentials.from_json_keyfile_name(json_path, scope)\n","client = gspread.authorize(creds)\n","\n","spreadsheet_id = '1nysE4mZ8xzFzEE5IibUaU65qaG3z6ftlSYJtWuijVOg'\n","spreadsheet = client.open_by_key(spreadsheet_id)\n","sheet = spreadsheet.worksheet('sheet1')\n","\n","# ==============================\n","# 🖼️ Pasta de arquivos\n","# ==============================\n","image_folder = '/content/drive/MyDrive/Colab Notebooks/contracapas'\n","\n","# ==============================\n","# 🧠 Função OCR\n","# ==============================\n","reader = easyocr.Reader(['pt'], gpu=True)\n","\n","def extrair_dados(texto):\n","    titulo = autor = ano = editora = 'Não encontrado'\n","    padrao_titulo = r'^(.*?)\\n'\n","    padrao_autor = r'(?i)Azevedo,\\s*(.*?)\\n|Autor[:\\s]*(.*?)(?:\\n|$)'\n","    padrao_ano = r'(\\d{4})'\n","    padrao_editora = r'(?i)Editora[:\\s]*(.*?)(?:\\n|$)'\n","\n","    match_titulo = re.search(padrao_titulo, texto)\n","    if match_titulo:\n","        titulo = match_titulo.group(1).strip()\n","\n","    match_autor = re.search(padrao_autor, texto)\n","    if match_autor:\n","        autor = (match_autor.group(1) or match_autor.group(2)).strip()\n","\n","    match_ano = re.search(padrao_ano, texto)\n","    if match_ano:\n","        ano = match_ano.group(1).strip()\n","\n","    match_editora = re.search(padrao_editora, texto)\n","    if match_editora:\n","        editora = match_editora.group(1).strip()\n","\n","    return titulo, autor, ano, editora\n","\n","# ==============================\n","# 🔁 Processar arquivos\n","# ==============================\n","def arquivos_ordenados(pasta):\n","    return sorted(os.listdir(pasta), key=lambda x: [int(t) if t.isdigit() else t for t in re.split(r'(\\d+)', x)])\n","\n","arquivos = arquivos_ordenados(image_folder)\n","\n","# Verificar duplicatas na planilha\n","dados_existentes = [row[4] for row in sheet.get_all_values()[1:]]\n","\n","for file_name in arquivos:\n","    if file_name in dados_existentes:\n","        print(f\"⚠️ Pulando {file_name} (já existe na planilha)\")\n","        continue\n","\n","    file_path = os.path.join(image_folder, file_name)\n","    texto_extraido = \"\"\n","\n","    # PDF\n","    if file_name.lower().endswith('.pdf'):\n","        pages = convert_from_path(file_path)\n","        for page in pages:\n","            texto_extraido += ' ' + ' '.join([line[1] for line in reader.readtext(np.array(page))])\n","    # Imagem\n","    elif file_name.lower().endswith(('.png', '.jpg', '.jpeg')):\n","        img = Image.open(file_path)\n","        texto_extraido = ' '.join([line[1] for line in reader.readtext(np.array(img))])\n","    else:\n","        print(f\"⚠️ Formato não suportado: {file_name}\")\n","        continue\n","\n","    titulo, autor, ano, editora = extrair_dados(texto_extraido)\n","    print(f\"📚 {file_name} -> {titulo} | {autor} | {ano} | {editora}\")\n","\n","    sheet.append_row([titulo, autor, ano, editora, file_name])\n","\n","# ==============================\n","# 🎨 Formatação da planilha\n","# ==============================\n","# Congelar primeira linha\n","set_frozen(sheet, rows=1)\n","\n","# Largura das
+# ==============================
+# 🔧 Instalação de pacotes
+# ==============================
+!apt update -y
+!apt install -y tesseract-ocr poppler-utils
+!pip install --upgrade pytesseract Pillow pdf2image PyMuPDF easyocr gspread oauth2client \
+    google-api-python-client google-auth google-auth-oauthlib google-auth-httplib2 \
+    gspread-formatting opencv-python-headless numpy
+
+# ==============================
+# 📂 Montar Google Drive
+# ==============================
+from google.colab import drive
+drive.mount('/content/drive', force_remount=True)
+
+# ==============================
+# 📦 Importações
+# ==============================
+import os
+import re
+import fitz  # PyMuPDF
+import numpy as np
+from PIL import Image
+import pytesseract
+import easyocr
+import gspread
+from oauth2client.service_account import ServiceAccountCredentials
+from pdf2image import convert_from_path
+from gspread_formatting import set_row_height, set_column_width, format_cell_range, CellFormat, TextFormat, set_frozen
+
+# ==============================
+# 🔐 Autenticação Google
+# ==============================
+scope = [
+    "https://www.googleapis.com/auth/spreadsheets",
+    "https://www.googleapis.com/auth/drive"
+]
+
+json_path = '/content/drive/MyDrive/Colab Notebooks/caetanodecampos-0e106bb10513.json'
+if not os.path.exists(json_path):
+    raise FileNotFoundError(f"Arquivo JSON não encontrado: {json_path}")
+
+creds = ServiceAccountCredentials.from_json_keyfile_name(json_path, scope)
+client = gspread.authorize(creds)
+
+spreadsheet_id = '1nysE4mZ8xzFzEE5IibUaU65qaG3z6ftlSYJtWuijVOg'
+spreadsheet = client.open_by_key(spreadsheet_id)
+sheet = spreadsheet.worksheet('sheet1')
+
+# ==============================
+# 🖼️ Pasta de arquivos
+# ==============================
+image_folder = '/content/drive/MyDrive/Colab Notebooks/contracapas'
+
+# ==============================
+# 🧠 Função OCR + Extração de Dados
+# ==============================
+reader = easyocr.Reader(['pt'], gpu=True)
+
+def extrair_dados(texto):
+    """Extrai título, autor, ano e editora do texto OCR"""
+    titulo = autor = ano = editora = "Não encontrado"
+    linhas = [l.strip() for l in texto.splitlines() if l.strip()]
+
+    # -------------------
+    # TÍTULO → primeira linha longa "limpa"
+    # -------------------
+    for linha in linhas:
+        if len(linha.split()) > 3 and not linha.isupper():
+            titulo = linha
+            break
+
+    # -------------------
+    # AUTOR → procura padrão "Sobrenome, Nome"
+    # -------------------
+    padrao_autor = r"([A-ZÁÉÍÓÚÂÊÔÃÕÇ][a-záéíóúâêôãõç]+,\s+[A-ZÁÉÍÓÚÂÊÔÃÕÇ][a-záéíóúâêôãõç]+.*)"
+    match_autor = re.search(padrao_autor, texto)
+    if match_autor:
+        autor = match_autor.group(1).strip()
+
+    # -------------------
+    # ANO → primeira ocorrência de 4 dígitos plausível
+    # -------------------
+    padrao_ano = r"(19\d{2}|20\d{2}|202\d|203\d)"
+    match_ano = re.search(padrao_ano, texto)
+    if match_ano:
+        ano = match_ano.group(1)
+
+    # -------------------
+    # EDITORA → palavras-chave
+    # -------------------
+    padrao_editora = r"(?i)(Editora\s+[^\n,]+|Publicado por\s+[^\n,]+|FTD|Ática|Moderna|Companhia das Letras|Saraiva)"
+    match_editora = re.search(padrao_editora, texto)
+    if match_editora:
+        editora = match_editora.group(1).strip()
+
+    return titulo, autor, ano, editora
+
+# ==============================
+# 🔁 Processar arquivos (com tratamento de erros)
+# ==============================
+def arquivos_ordenados(pasta):
+    """Ordena arquivos numericamente"""
+    return sorted(os.listdir(pasta), key=lambda x: [int(t) if t.isdigit() else t for t in re.split(r'(\d+)', x)])
+
+arquivos = arquivos_ordenados(image_folder)
+
+# Verificar duplicatas na planilha
+dados_existentes = [row[4] for row in sheet.get_all_values()[1:]]
+
+for file_name in arquivos:
+    try:
+        if file_name in dados_existentes:
+            print(f"⚠️ Pulando {file_name} (já existe na planilha)")
+            continue
+
+        file_path = os.path.join(image_folder, file_name)
+        texto_extraido = ""
+
+        # PDF
+        if file_name.lower().endswith('.pdf'):
+            try:
+                pages = convert_from_path(file_path)
+                for page in pages:
+                    texto_extraido += ' ' + ' '.join([line[1] for line in reader.readtext(np.array(page))])
+            except Exception as e:
+                print(f"❌ Erro ao processar PDF {file_name}: {e}")
+                texto_extraido = ""
+
+        # Imagem
+        elif file_name.lower().endswith(('.png', '.jpg', '.jpeg')):
+            try:
+                img = Image.open(file_path)
+                texto_extraido = ' '.join([line[1] for line in reader.readtext(np.array(img))])
+            except Exception as e:
+                print(f"❌ Erro ao processar imagem {file_name}: {e}")
+                texto_extraido = ""
+
+        else:
+            print(f"⚠️ Formato não suportado: {file_name}")
+            continue
+
+        # Se não conseguiu extrair nada
+        if not texto_extraido.strip():
+            titulo, autor, ano, editora = ["Não encontrado"] * 4
+        else:
+            titulo, autor, ano, editora = extrair_dados(texto_extraido)
+
+        print(f"📚 {file_name} -> {titulo} | {autor} | {ano} | {editora}")
+
+        try:
+            sheet.append_row([titulo, autor, ano, editora, file_name])
+        except Exception as e:
+            print(f"❌ Erro ao salvar {file_name} na planilha: {e}")
+
+    except Exception as e:
+        print(f"❌ Erro inesperado no arquivo {file_name}: {e}")
+
+# ==============================
+# 🎨 Formatação da planilha
+# ==============================
+# Congelar primeira linha
+set_frozen(sheet, rows=1)
+
+# Largura das colunas
+set_column_width(sheet, 'A', 300)
+set_column_width(sheet, 'B', 200)
+set_column_width(sheet, 'C', 100)
+set_column_width(sheet, 'D', 200)
+set_column_width(sheet, 'E', 150)
+
+# Altura da primeira linha
+set_row_height(sheet, '1:1', 30)
+
+# Cabeçalho negrito e centralizado
+header_format = CellFormat(
+    textFormat=TextFormat(bold=True),
+    horizontalAlignment='CENTER'
+)
+format_cell_range(sheet, 'A1:E1', header_format)
